--- a/index.html
+++ b/index.html
@@ -8,40 +8,26 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nova+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bangers&family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yesteryear&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <div class="cabecera">
-    <div class="texto" style="z-index: 1;">
-      <h1>Cajas para Pizza y Sushi</h1>
-    </div>
-    <div class="imagen-cabecera" style="z-index: 2;">
-      <img src="images/cajas-de-pizza.png" alt="">
-    </div>
-    <div class="texto" style="z-index: 3; margin-top: 45%; position: absolute;">
-      <p style="text-transform: uppercase;">Personalizadas desde 20 unidades</p>
-    </div>
+    <div class="texto-cabecera">
+      <h1>Cajas para<br>Pizza y Sushi.<br>Personalizadas<br>con tu propio<br>logo.</h1><br><a href="https://wa.me/56975896243" style="margin-bottom: 10px; padding: 20px; background-color: #25D366; color: white; font-family: 'Helvetica'; font-size: 1.5em; text-transform: uppercase; text-decoration: none; border-radius: 50px; animation: none;">Escríbenos</a>
+      </div>
+    <div class="imagen-cabecera">
+      <img src="images/cajas-de-pizza.png" style="transform: scale(1.2); margin-bottom: 6.7%;" alt="">    </div>
   </div>
 
-  <div class="medio" style="position: relative; z-index: 4;">
-    <div class="texto">
-      <h2 style="padding-top: 5vh;">Con tu propio logo</h2>
-    </div>
-    <div class="imagen">
-      <img src="images\cajas-de-sushi.png" alt="">
-    </div>
-  </div>
+<div class="pie">
+<div class="texto-pie">
+  <h1>APROVECHA<br>ESTA OPORTUNIDAD</h1>
+  <p>Escríbenos al<br><a href="https://wa.me/56975896243"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/250px-WhatsApp.svg.png">+56 9 7589 6243</a></p>
+</div>
+<div class="imagen-pie">
+  <img src="images/cajas-de-sushi.png" alt="">
+</div>
+</div>
 
-  <div class="final" style="position: relative; z-index: 5;">
-    <div class="texto">
-      <h3>Contáctanos a nuestro WhatsApp</h3>
-    </div>
-    <div class="whatsapp">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/250px-WhatsApp.svg.png" class="imagen-wsp" alt="">
-        <p><a href="#" style="text-decoration: none; color: #fc3223;">+56 9 7589 6243</a></p>
-    </div>
-  </div>
-
-</body>
 </html>
